--- a/public/profile-my-orders.html
+++ b/public/profile-my-orders.html
@@ -754,7 +754,7 @@
                                                         <span class="fw-bold fa-num">۴۲,۴۱۵,۰۰۰
                                                             <span>تومان</span></span>
                                                     </div>
-                                                    <a href="#"
+                                                    <a href="profile-my-order-detail.html"
                                                         class="btn btn-link fw-bold user-order-detail-link">جزئیات
                                                         سفارش <i class="ri-arrow-left-s-fill"></i></a>
                                                 </div>
@@ -795,7 +795,7 @@
                                                         <span class="fw-bold fa-num">۴۲,۴۱۵,۰۰۰
                                                             <span>تومان</span></span>
                                                     </div>
-                                                    <a href="#"
+                                                    <a href="profile-my-order-detail.html"
                                                         class="btn btn-link fw-bold user-order-detail-link">جزئیات
                                                         سفارش <i class="ri-arrow-left-s-fill"></i></a>
                                                 </div>
