--- a/public/profile.html
+++ b/public/profile.html
@@ -596,41 +596,40 @@
                                 </div>
                                 <ul class="nav nav-items-with-icon flex-column">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-file-list-3-line"></i>
+                                        <a class="nav-link" href="profile-my-orders.html"><i class="nav-link-icon ri-file-list-3-line"></i>
                                             سفارش
                                             های من</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-heart-3-line"></i> لیست
-                                            ها</a>
+                                        <a class="nav-link" href="profile-favorites.html"><i class="nav-link-icon ri-heart-3-line"></i> لیست علاقمندی ها</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-chat-1-line"></i>
+                                        <a class="nav-link" href="profile-comments.html"><i class="nav-link-icon ri-chat-1-line"></i>
                                             نظرات</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-map-pin-line"></i> نشانی
+                                        <a class="nav-link" href="profile-addresses.html"><i class="nav-link-icon ri-map-pin-line"></i> نشانی
                                             ها</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-gift-line"></i> کارت های
+                                        <a class="nav-link" href="profile-giftcards.html"><i class="nav-link-icon ri-gift-line"></i> کارت های
                                             هدیه</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-notification-line"></i>
+                                        <a class="nav-link" href="profile-notification.html"><i class="nav-link-icon ri-notification-line"></i>
                                             پیغام ها</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-time-line"></i> بازدید
+                                        <a class="nav-link" href="profile-user-history.html"><i class="nav-link-icon ri-time-line"></i> بازدید
                                             های
                                             اخیر</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-user-line"></i> اطلاعات
+                                        <a class="nav-link" href="profile-personal-info.html"><i class="nav-link-icon ri-user-line"></i> اطلاعات
                                             حساب</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#"><i class="nav-link-icon ri-logout-box-r-line"></i>
+                                        <a class="nav-link" href="index-1.html"><i class="nav-link-icon ri-logout-box-r-line"></i>
                                             خروج</a>
                                     </li>
                                 </ul>
